Fix (Footer): Align Footer with Navbar

--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -84,9 +84,8 @@
 @media (min-width: 1250px) {
   .footer {
     flex-direction: row;
-    padding: 4.5rem 0;
     justify-content: space-between;
-    padding-inline: clamp(4rem, 12vw, 17.5rem);
+    padding: 4.5rem 11rem;
   }
 
   .image {
